<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GettingThingsDoneMusic</string>

    <string name="SoundCloud">SoundCloud</string>
    <string name="HearThisAt">HearThis.At</string>

    <!-- Main activity & Main Fragment-->
    <string name="main_activity_name">Best sounds for GTD</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_exit">Quit</string>
    <string name="settings_update_error">Tags can not be empty</string>
    <string name="settings_updated">New settings stored</string>
    <string name="settings_reset">Default settings restored</string>
    <string name="next_track">gimme another\n cool sound</string>
    <string name="prev_track">that last one\n was sweet</string>
    <string name="progress_msg">Please wait while retrieving a playlist</string>
    <string name="progress_msg2">New track is loading …</string>
    <string name="notrack_err">Sorry, no tracks found on your tags</string>
    <string name="connx_err">Ops, there is a problem with internet connection</string>
    <string name="app_err">Ops, there is a problem with the application</string>
    <string name="no_audio_focus_err">Ops, this app can not play music while another app uses audio service</string>
    <string name="nexttrack_err">Ops, there is a problem to play next track</string>
    <string name="prevtrack_err">Ops, there is a problem to play previous track</string>
    <string name="play_failed">Somehow, app can not play tracks</string>

    <string name="on_track_clicked_menu">Choose option :</string>
    <string name="mark_as_favorite">Mark as favorite</string>
    <string name="remove_from_favorite">Remove from favorites</string>
    <string name="open_in_SC">Open in SoundCloud</string>
    <string name="download">Download to phone</string>

    <!-- Playlist Fragment  -->
    <string name="pf_title">Now played tracks : </string>

    <!-- Favorite Tracks Fragment  -->
    <string name="ftf_title">Favorite tracks : </string>
    <string name="ftf_play_tracks">Add to playlist</string>
    <string name="ftf_play_tracks_OK">Tracks are loaded to the playlist</string>

    <!-- Settings -->
    <string name="settings_dialog_title">Playlist configuration : </string>
    <string name="settings_dialog_tags">Tags :</string>
    <string name="settings_update">Update</string>
    <string name="settings_default">Default</string>
    <string name="settings_default_tags">trance, Armin van Buuren, Dash Berlin, A State Of Trance</string>
    <string name="settings_providers">Source providers :</string>
    <string name="settings_track_duration">Track duration :</string>
    <string-array name="settings_durations">
        <item>Any duration</item>
        <item>Less than 5 minutes</item>
        <item>Less than 30 minutes</item>
        <item>Only long sessions</item>
    </string-array>
    <string name="settings_double_click">Click twice to reset to default</string>


    <!-- TrackInfoDialog -->
    <string name="tid_play">Play</string>
    <string name="tid_delete">Remove</string>
    <string name="tid_double_click">Click twice to remove track</string>

    <!-- TrackInfo -->
    <string name="trackinfo_dialog_notags">No tags</string>

    <!-- About -->
    <string name="about_dialog_title">About</string>
    <string name="about_dialog_ok">OK</string>
    <string name="about_text">
        This app is inspired by the concept of the site \'Get Work Done Music\' to
        \'Get Things Done\' with good music ! \n Visit www.getworkdonemusic.com \n \n

        1) The idea is simply hit the \'play\' button, listen and accomplish your task. \n
        2) If you like the track then \'Mark as favorite\' tapping on the title. \n
        3) Swiping to the right, discover \'Playlist\' and \'Favorite tracks\' views \n
        4) Press on \'Add to playlist\' in the \'Favorite tracks\' views and listen only your favorite tracks
    </string>

    <string name="thx">
        Special thanks to \n
        - \'Soundcloud\' \n
        - \'HearThis . At\'
    </string>

</resources>
