<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/getting_things_done_music"
    tools:context="com.vfdev.gettingthingsdonemusicapp.Fragments.SettingsFragment">

    <!--Separator-->
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/settings_dialog_title"
        android:id="@+id/fs_title"
        android:background="@color/transparentColor1"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fs_separator"
        android:src="@android:color/white"
        android:layout_gravity="center_horizontal" />
    <!--Separator-->

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/settings_dialog_tags"
        android:background="@color/transparentColor1"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:id="@+id/fs_tags_text" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:id="@+id/fs_tags"
        android:text="@string/settings_default_tags"
        android:selectAllOnFocus="false"
        android:gravity="top|left"
        android:background="@color/transparentColor2"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin" />

    <!--Separator-->
    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/separator2"
        android:src="@android:color/white"
        android:layout_gravity="center_horizontal" />
    <!--Separator-->


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparentColor1"
        android:padding="@dimen/activity_horizontal_margin05">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/settings_track_duration"
            android:id="@+id/textView2"
            android:layout_weight="1" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/fs_track_duration"
            android:layout_weight="1" />
    </LinearLayout>

    <!--Separator-->
    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/separator3"
        android:src="@android:color/white"
        android:layout_gravity="center_horizontal" />
    <!--Separator-->

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/settings_providers"
        android:id="@+id/textView"
        android:background="@color/transparentColor1"
        android:padding="@dimen/activity_horizontal_margin05" />

    <GridView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparentColor2"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:id="@+id/fs_providers"
        android:numColumns="2"
        android:layout_weight="1" />

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/separator4"
        android:src="@android:color/white"
        android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparentColor1">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/settings_default"
            android:id="@+id/fs_reset"
            android:gravity="center"
            android:textStyle="bold"
            android:padding="@dimen/activity_horizontal_margin"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_weight="1" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:src="@android:color/white"
            android:id="@+id/separator5" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/settings_update"
            android:id="@+id/fs_update"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:background="@color/transparentColor1"
            android:textStyle="bold"
            android:gravity="center"
            android:enabled="false"
            android:editable="false"
            android:layout_weight="1" />

        <!--<Button-->
            <!--style="?android:attr/buttonStyleSmall"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/settings_update"-->
            <!--android:id="@+id/fs_update"-->
            <!--android:layout_gravity="center" />-->

    </LinearLayout>


</LinearLayout>